# game-dev-gpu

./: CMakeLists.txt  Game Design Doc.txt  imgui.ini
assets/Shaders/: SolidColor.frag.dxil  TexturedQuad.frag.dxil  TexturedQuad.vert.dxil  vertex_shader.vert.dxil  vertex_shader.vert.hlsl  vertex_shader.vert.spv
lib/cmake/SDL3_shadercross/: SDL3_shadercross-shared-targets.cmake  SDL3_shadercross-static-targets.cmake
src/: camera.cpp  camera.hpp  graphics.cpp  graphics.hpp  main.cpp
